--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <p>This leaderboard keeps track of the people with the most undocumented public methods in the Facebook codebase.</p>
 <ol>
 {% for player in players %}
-<li>Yes</li>
+<li>{{ player.name}}: {{ player.score }}</li>
 {% endfor %}
 </ol>
 {% endblock %}
