--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,12 @@
 <p>This leaderboard keeps track of the people with the most undocumented public methods in the Facebook codebase.</p>
 <ol>
 {% for player in players %}
-<li>{{ player.name}}: {{ player.score }}</li>
+<li><a href="https://our.intern.facebook.com/intern/profile/{{ player.name}}">{{ player.name }}</a>: {{ player.score }}</li>
+<ul>
+    {% for method in player.methods %}
+    <li>{{ method.file }}: {{ method.line }}</li>
+    {% endfor %}
+</ul>
 {% endfor %}
 </ol>
 {% endblock %}
